cluster/manifest/base/portfolio-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: portfolio
  namespace: default
  labels:
    app: portfolio

spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  strategy: {}
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - image: ghcr.io/kaichevannes/portfolio:426fc79ee0d36402228db49e2845083dc94a27ff
        name: portfolio
        ports:
          - name: web
            containerPort: 3000
