cluster/manifest/base/traefik-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  namespace: default
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    spec:
      metadata:
        labels:
          app: traefik
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.3
          args:
            - --providers.kubernetescrd
          ports:
            - name: web
              containerPort: 80
