cluster/manifest/base/portfolio-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: default
spec:
  ports:
    - name: web
      port: 3000
  selector:
    app: portfolio
