cluster/manifest/base/traefik-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: default

spec:
  ports:
    - name: web
      port: 80
    - name: websecure
      port: 443
  selector:
    app: traefik
