cluster/manifest/base/portfolio-ingress.yaml
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: portfolio-ingress
#   namespace: default
# spec:
#   entryPoints:
#     - websecure
#   routes:
#   - match: Host(`kaichevannes.com`)
#     kind: Rule
#     services:
#     - name: portfolio
#       port: 3000
#   tls:
#     certResolver: myresolver
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: default

spec:
  rules:
    - host: kaichevannes.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolilo
                port:
                  number: 3000
